[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = ""

[project]
name = "mcgj"
version = "0.10"
authors = [
    {name = "Sara"},
    {name = "Toph"},
    {name = "Contributors"},
]
maintainers = [
    {name = "Sara"},
    {name = "Toph"},
    {name = "Contributors"},
]
description = "Music Consumption Group Jockey"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "authlib==1.3.1",
    "beautifulsoup4==4.9.1",
    "click==8.1.3",
    "flask==3.1.2",
    "flask-login>=0.6.3",
    "itsdangerous==2.2.0",
    "jinja2==3.1.3",
    "markupsafe==2.1.2",
    "python-dotenv==1.0.0",
    "requests>=2.25",
    "spotipy>=2.25.1",
]

[project.optional-dependencies]
test = [
    "pytest",
]
deploy = [
    "gunicorn==20.0.4",
]

[tool.pytest]
minversion = "9.0"
testpaths = [
    "tests",
]

[tool.coverage.run]
branch = true
source = "mcgj"
