[metadata]
name = mcgj
version = 0.9.0
# url = https://flask.palletsprojects.com/tutorial/
# license = BSD-3-Clause
maintainer = Sara & Toph
maintainer_email = hi@example.org
description = MCGJ.
# long_description = file: README.md
# long_description_content_type = text/x-rst

[options]
packages = find:
include_package_data = true
install_requires = Flask

[options.extras_require]
test = pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = mcgj
