[metadata]
name = mcgj
version = 0.9.0
# url = https://limitless-everglades-09447.herokuapp.com/
# license = BSD-3-Clause
maintainer = Sara & Toph
maintainer_email = toph.allen@gmail.com
description = Music Consumption Group Jockey
# long_description = file: README.md
# long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = true
install_requires = Flask

[options.extras_require]
test = pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source = mcgj
